--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,13 @@
 {
-    "name": "jsonQuiz",
-    "short_name": "jsonQuiz",
+    "name": "OpenQuiz",
+    "short_name": "OpenQuiz",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#007bff",
+    "theme_color": "#e9ecef",
     "icons": [
         {
-            "src": "icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icon-512x512.png",
+            "src": "maskable_icon_x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
